# testris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_win.bat  main.cpp
lib/: all.res  all_res.lib  getdeps.sh  jg_baselayer.h  jg_cbui.h
src/: render_and_update.h  testris.h  testris_lib.h  testris_types.h
